--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -12,19 +12,21 @@ jobs:
   R-CMD-check:
     runs-on: ${{ matrix.config.os }}
 
-    name: "${{ matrix.config.os }}, R: ${{ matrix.config.r }}, tmux: ${{ matrix.config.tmux }}"
+    name: "R-${{ matrix.config.r }}-tmux-${{ matrix.config.tmux }}-${{ matrix.config.os }}"
 
     strategy:
       fail-fast: false
       matrix:
         config:
-          - {os: macOS-latest, r: "devel", tmux: "3.1"}
-          - {os: macOS-latest, r: "4.0", tmux: "3.1"}
+          - {os: macOS-latest, r: "devel", tmux: "3.1b"}
+          - {os: macOS-latest, r: "4.0", tmux: "3.1b"}
+          - {os: ubuntu-16.04, r: "4.0", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "3.1b"}
+          - {os: ubuntu-16.04, r: "3.6", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "3.1b"}
+          - {os: ubuntu-16.04, r: "3.5", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "3.1b"}
+          - {os: ubuntu-16.04, r: "3.4", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "3.1b"}
+          - {os: ubuntu-16.04, r: "3.3", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "3.1b"}
+          - {os: ubuntu-16.04, r: "4.0", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "3.1a"}
           - {os: ubuntu-16.04, r: "4.0", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "3.1"}
-          - {os: ubuntu-16.04, r: "3.6", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "3.1"}
-          - {os: ubuntu-16.04, r: "3.5", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "3.1"}
-          - {os: ubuntu-16.04, r: "3.4", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "3.1"}
-          - {os: ubuntu-16.04, r: "3.3", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "3.1"}
           - {os: ubuntu-16.04, r: "4.0", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "3.0a"}
           - {os: ubuntu-16.04, r: "4.0", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "3.0"}
           - {os: ubuntu-16.04, r: "4.0", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "2.9a"}
