--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,6 @@
-pandoc: 2.8.1
-pkgdown: 1.5.1
+pandoc: 2.11.3.1
+pkgdown: 1.6.1
 pkgdown_sha: ~
-articles: []
-last_built: 2020-05-22T08:45Z
+articles: {}
+last_built: 2021-01-13T13:24Z
 
