--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -19,26 +19,26 @@ jobs:
       matrix:
         config:
           - {os: macOS-latest, r: "devel", tmux: "3.1c"}
-          - {os: macOS-latest, r: "4.0", tmux: "3.1c"}
-          - {os: ubuntu-16.04, r: "4.0", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "3.1c"}
+          - {os: macOS-latest, r: "release", tmux: "3.1c"}
+          - {os: ubuntu-16.04, r: "release", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "3.1c"}
           - {os: ubuntu-16.04, r: "3.6", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "3.1c"}
           - {os: ubuntu-16.04, r: "3.5", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "3.1c"}
           - {os: ubuntu-16.04, r: "3.4", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "3.1c"}
           - {os: ubuntu-16.04, r: "3.3", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "3.1c"}
-          - {os: ubuntu-16.04, r: "4.0", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "3.1a"}
-          - {os: ubuntu-16.04, r: "4.0", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "3.1"}
-          - {os: ubuntu-16.04, r: "4.0", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "3.0a"}
-          - {os: ubuntu-16.04, r: "4.0", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "3.0"}
-          - {os: ubuntu-16.04, r: "4.0", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "2.9a"}
-          - {os: ubuntu-16.04, r: "4.0", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "2.9"}
-          - {os: ubuntu-16.04, r: "4.0", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "2.8"}
-          - {os: ubuntu-16.04, r: "4.0", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "2.7"}
-          - {os: ubuntu-16.04, r: "4.0", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "2.6"}
-          - {os: ubuntu-16.04, r: "4.0", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "2.5"}
-          - {os: ubuntu-16.04, r: "4.0", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "2.4"}
-          - {os: ubuntu-16.04, r: "4.0", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "2.3"}
-          - {os: ubuntu-16.04, r: "4.0", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "2.2"}
-          - {os: ubuntu-16.04, r: "4.0", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "2.1"}
+          - {os: ubuntu-16.04, r: "release", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "3.1a"}
+          - {os: ubuntu-16.04, r: "release", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "3.1"}
+          - {os: ubuntu-16.04, r: "release", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "3.0a"}
+          - {os: ubuntu-16.04, r: "release", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "3.0"}
+          - {os: ubuntu-16.04, r: "release", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "2.9a"}
+          - {os: ubuntu-16.04, r: "release", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "2.9"}
+          - {os: ubuntu-16.04, r: "release", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "2.8"}
+          - {os: ubuntu-16.04, r: "release", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "2.7"}
+          - {os: ubuntu-16.04, r: "release", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "2.6"}
+          - {os: ubuntu-16.04, r: "release", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "2.5"}
+          - {os: ubuntu-16.04, r: "release", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "2.4"}
+          - {os: ubuntu-16.04, r: "release", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "2.3"}
+          - {os: ubuntu-16.04, r: "release", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "2.2"}
+          - {os: ubuntu-16.04, r: "release", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "2.1"}
 
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
