--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -1,10 +1,10 @@
+# Workflow derived from https://github.com/r-lib/actions/tree/v2/examples
+# Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
   push:
-    branches:
-      - master
+    branches: [main, master]
   pull_request:
-    branches:
-      - master
+    branches: [main, master]
 
 name: R-CMD-check
 
@@ -12,122 +12,38 @@ jobs:
   R-CMD-check:
     runs-on: ${{ matrix.config.os }}
 
-    name: "R-${{ matrix.config.r }}-tmux-${{ matrix.config.tmux }}-${{ matrix.config.os }}"
+    name: ${{ matrix.config.os }} (${{ matrix.config.r }})
 
     strategy:
       fail-fast: false
       matrix:
         config:
-          - {os: macOS-latest, r: "devel", tmux: "3.1c"}
-          - {os: macOS-latest, r: "release", tmux: "3.1c"}
-          - {os: ubuntu-16.04, r: "release", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "3.1c"}
-          - {os: ubuntu-16.04, r: "3.6", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "3.1c"}
-          - {os: ubuntu-16.04, r: "3.5", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "3.1c"}
-          - {os: ubuntu-16.04, r: "3.4", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "3.1c"}
-          - {os: ubuntu-16.04, r: "3.3", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "3.1c"}
-          - {os: ubuntu-16.04, r: "release", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "3.1a"}
-          - {os: ubuntu-16.04, r: "release", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "3.1"}
-          - {os: ubuntu-16.04, r: "release", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "3.0a"}
-          - {os: ubuntu-16.04, r: "release", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "3.0"}
-          - {os: ubuntu-16.04, r: "release", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "2.9a"}
-          - {os: ubuntu-16.04, r: "release", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "2.9"}
-          - {os: ubuntu-16.04, r: "release", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "2.8"}
-          - {os: ubuntu-16.04, r: "release", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "2.7"}
-          - {os: ubuntu-16.04, r: "release", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "2.6"}
-          - {os: ubuntu-16.04, r: "release", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "2.5"}
-          - {os: ubuntu-16.04, r: "release", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "2.4"}
-          - {os: ubuntu-16.04, r: "release", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "2.3"}
-          - {os: ubuntu-16.04, r: "release", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "2.2"}
-          - {os: ubuntu-16.04, r: "release", rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest", tmux: "2.1"}
+          - {os: ubuntu-latest,   r: 'release'}
+          - {os: ubuntu-latest,   r: 'devel', http-user-agent: 'release'}
+          - {os: ubuntu-latest,   r: 'oldrel-1'}
+          - {os: macos-latest,   r: 'release'}
 
     env:
-      R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
-      RSPM: ${{ matrix.config.rspm }}
-      TMUX_VERSION: ${{ matrix.config.tmux }}
+      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+      R_KEEP_PKG_SOURCE: yes
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
-      - uses: r-lib/actions/setup-r@master
+      - uses: r-lib/actions/setup-pandoc@v2
+
+      - uses: r-lib/actions/setup-r@v2
         with:
           r-version: ${{ matrix.config.r }}
+          http-user-agent: ${{ matrix.config.http-user-agent }}
+          use-public-rspm: true
 
-      - uses: r-lib/actions/setup-pandoc@master
-
-      - name: Query dependencies
-        run: |
-          install.packages('remotes')
-          saveRDS(remotes::dev_package_deps(dependencies = TRUE), ".github/depends.Rds", version = 2)
-        shell: Rscript {0}
-
-      - name: Cache R packages
-        if: runner.os != 'Windows'
-        uses: actions/cache@v1
+      - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          path: ${{ env.R_LIBS_USER }}
-          key: ${{ runner.os }}-r-${{ matrix.config.r }}-1-${{ hashFiles('.github/depends.Rds') }}
-          restore-keys: ${{ runner.os }}-r-${{ matrix.config.r }}-1-
+          extra-packages: any::rcmdcheck
+          needs: check
 
-      - name: Install Linux dependencies
-        if: runner.os == 'Linux'
-        env:
-          RHUB_PLATFORM: linux-x86_64-ubuntu-gcc
-        run: |
-          Rscript -e "remotes::install_github('r-hub/sysreqs')"
-          sysreqs=$(Rscript -e "cat(sysreqs::sysreq_commands('DESCRIPTION'))")
-          sudo -s eval "$sysreqs"
-
-      - name: Install tmux on Linux
-        if: runner.os == 'Linux'
-        run: |
-          echo "Installing tmux ${TMUX_VERSION}..."
-          sudo apt-get install -y libevent-dev ncurses-dev
-          cd /tmp
-          wget https://github.com/tmux/tmux/releases/download/${TMUX_VERSION}/tmux-${TMUX_VERSION}.tar.gz
-          tar -xzf tmux-${TMUX_VERSION}.tar.gz
-          cd tmux-${TMUX_VERSION}
-          ./configure
-          make
-          sudo make install
-          echo "Successfully installed tmux ${TMUX_VERSION}"
-
-      - name: Install tmux on macOS
-        if: runner.os == 'macOS'
-        run: |
-          brew install tmux
-
-      - name: Install package dependencies
-        run: |
-          remotes::install_deps(dependencies = TRUE)
-          remotes::install_cran("rcmdcheck")
-        shell: Rscript {0}
-
-      - name: Session info
-        run: |
-          options(width = 100)
-          pkgs <- installed.packages()[, "Package"]
-          sessioninfo::session_info(pkgs, include_base = TRUE)
-        shell: Rscript {0}
-
-      - name: Check
-        env:
-          _R_CHECK_CRAN_INCOMING_: false
-        run: rcmdcheck::rcmdcheck(args = c("--no-manual", "--as-cran"), error_on = "warning", check_dir = "check")
-        shell: Rscript {0}
-
-      - name: Show testthat output
-        if: always()
-        run: find check -name 'testthat.Rout*' -exec cat '{}' \; || true
-        shell: bash
-
-      - name: Upload check results
-        if: failure()
-        uses: actions/upload-artifact@master
+      - uses: r-lib/actions/check-r-package@v2
         with:
-          name: ${{ runner.os }}-r${{ matrix.config.r }}-tmux${{ matrix.config.tmux }}-results
-          path: check
-
-      - name: Test coverage
-        if: matrix.config.os == 'macOS-latest' && matrix.config.r == '4.0'
-        run: covr::codecov()
-        shell: Rscript {0}
+          upload-snapshots: true
+          build_args: 'c("--no-manual","--compact-vignettes=gs+qpdf")'
