--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -12,7 +12,7 @@ jobs:
   R-CMD-check:
     runs-on: ${{ matrix.config.os }}
 
-    name: ${{ matrix.config.os }} (${{ matrix.config.r }})
+    name: tmux ${{ matrix.config.tmux }} on ${{ matrix.config.os }} (${{ matrix.config.r }})
 
     strategy:
       fail-fast: false
